--- a/src/main/resources/templates/friend/friends.html
+++ b/src/main/resources/templates/friend/friends.html
@@ -109,7 +109,7 @@
                                           role="form">
                                         <div class="md-form my-0">
                                             <input type="hidden" th:attr="name=id" class="form-control" th:value="${friend.id}"/>
-                                            <button type="submit" class="text-white btn red lighten-1 btn-sm">Usuń</button>
+                                            <button type="submit" class="text-white btn red lighten-1 btn-sm">Usuń <i class="far fa-trash-alt ml-1"></i></button>
                                         </div>
                                     </form>
 
