--- a/src/main/resources/templates/friend/blocked.html
+++ b/src/main/resources/templates/friend/blocked.html
@@ -112,7 +112,7 @@
                                           role="form">
                                         <div class="md-form my-0">
                                             <input type="hidden" th:attr="name=id" class="form-control" th:value="${blockedUser.id}"/>
-                                            <button type="submit" class="text-white btn green btn-sm">Odblokuj</button>
+                                            <button type="submit" class="text-white btn green btn-sm">Odblokuj<i class="fas fa-lock-open ml-1"></i></button>
                                         </div>
                                     </form>
 
