fixed profile edition

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -31,7 +31,7 @@
 
     <div class="row justify-content-center align-middle mt-5">
         <form class="form-horizontal jumbotron text-center border border-light p-5 justify-content-center"
-              autocomplete="off" action="#" th:action="@{/edit-profile}"
+              autocomplete="off" action="#" th:action="@{/profile}"
               th:object="${editProfileDto}" method="post"
               role="form">
             <div class="valid-feedback" th:utext="${successMessage}"></div>
