--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -30,7 +30,7 @@
 <div class="container h-100">
     <div class="row justify-content-center align-middle">
         <div class="col-md-6 mt-5">
-            <form th:action="@{/registration}" th:object="${userEntity}" method="POST" class="jumbotron text-center border border-light p-5 justify-content-center" action="#!" novalidate>
+            <form th:action="@{/registration}" th:object="${registerUserDto}" method="POST" class="jumbotron text-center border border-light p-5 justify-content-center" action="#!" novalidate>
 
                 <p class="h4 mb-4">Rejestracja</p>
 
